<resources>
    <string name="app_name">WorkHours</string>

    <!-- Menu -->
    <string name="show_details_menu_eng">Show working details</string>
    <string name="show_details_menu_pl">Pokaż historię</string>
    <string name="main_screen_menu_eng">Hours counter</string>
    <string name="main_screen_menu_pl">Licznik godzin</string>
    <string name="salary_menu_eng">Salary calculator</string>
    <string name="salary_menu_pl">Kalkulator wypłat</string>
    <string name="info_menu_eng">Informations from creator</string>
    <string name="info_menu_pl">Informacje</string>
    <string name="settings_menu_eng">Settings</string>
    <string name="settings_menu_pl">Ustawienia</string>
    <string name="history_menu_eng">History of months</string>
    <string name="history_menu_pl">Historia miesięcy</string>

    <!-- Buttons -->
    <string name="add_hours_button">Add hours</string>
    <string name="delete_hours_button">Delete hours</string>
    <string name="salary_calc_button">Calculate</string>
    <string name="currency_button">Apply</string>
    <string name="settings_reset_button">Reset</string>
    <string name="settings_delete_logs_button">Delete logs</string>

    <!-- Hints -->
    <string name="add_hours_hint">4.15 (hours.minutes)</string>
    <string name="salary_label">Hourly rate (zl.gr)</string>
    <string name="currency_hint">usd, zl, eur etc.</string>
    <string name="startTimeHint">Start time</string>
    <string name="endTimeHint">End time</string>

    <!-- Labels -->
    <string name="month_hours_text">This month</string>
    <string name="salary_amount">Salary</string>
    <string name="salary_text">Manage salary options</string>
    <string name="add_hours">Manage hours</string>
    <string name="switch_text">Mode</string>

    <!-- Info texts -->
    <string name="info_header">Information</string>
    <string name="info_content">Thank you for installing my app! If you find any problems with it, do not hesitate to email me (contact info below).</string>
    <string name="info_support">If you want to support my work, you can do it on Patronite</string>
    <string name="info_email">szymongawel123@gmail.com</string>
    <string name="info_contact_text">Contact</string>
    <string name="info_patronite_link">Link soon</string>

    <!-- Settings texts -->
    <string name="settings_header">Settings</string>
    <string name="settings_light">Light</string>
    <string name="settings_dark">Dark</string>
    <string name="settings_change_theme">Change theme</string>
    <string name="settings_reset_text">Reset values</string>
    <string name="settings_delete_logs">Delete logs</string>
    <string name="settings_select_language">Select language</string>

</resources>