<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/monthHoursView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginLeft="168dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="526dp"
        android:text="@string/month_hours_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hoursInMonth" />

    <TextView
        android:id="@+id/hoursInMonth"
        android:layout_width="100dp"
        android:layout_height="119dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="6dp"
        android:gravity="center"
        android:text="0"
        android:textSize="72sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/monthHoursView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addHoursText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="147dp"
        android:layout_marginLeft="147dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="147dp"
        android:layout_marginRight="147dp"
        android:text="@string/add_hours"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hoursInMonth" />

    <Button
        android:id="@+id/addHoursButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/custom_rounded_corners"
        android:onClick="onAddHoursButtonClick"
        android:text="@string/add_hours_button"
        app:backgroundTint="@android:color/darker_gray"
        app:layout_constraintStart_toEndOf="@+id/addHoursEditView"
        app:layout_constraintTop_toBottomOf="@+id/addHoursText" />

    <EditText
        android:id="@+id/addHoursEditView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:hint="@string/add_hours_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/addHoursButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addHoursText" />

</androidx.constraintlayout.widget.ConstraintLayout>